--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       gtag('js', new Date());
 
       gtag('config', 'G-YQWZ86PEJQ');
-    </script>-->
+    </script>
     <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <title>Coffee Lovers</title>
 
