--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
 
       gtag('config', 'G-YQWZ86PEJQ');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3090563077320193"
+            crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <title>Coffee Lovers</title>
 
