--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3090563077320193"
             crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="cofeelovers" data-description="Support me on Buy me a coffee!" data-message="Thank you for visiting my blog. Your feedback is essential to me, and my blog can only exist thanks to visitors. If you'd like to, you can buy me a coffee :)" data-color="#40DCA5" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
     <title>Coffee Lovers</title>
 
   </head>
